# Cpp-Kalari

./: .gitignore  README.md
symmetryFinder/: CMakeLists.txt  README.md
symmetryFinder/include/: Kernels.hpp  Point.hpp
symmetryFinder/src/: main.cpp  unitTesting.cpp
